--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script defer src="https://cloud.umami.is/script.js" data-website-id="efa2bc9f-31d1-48b9-982f-b753bc2b8270"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
