SEO optimization: self-host fonts, cache headers, prerender, content enrichment

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#6366f1" />
 		<meta name="author" content="Mi Barrio" />
+		<link rel="preconnect" href="https://xjsjdworrpquwatfvnuy.supabase.co" />
+		<link rel="dns-prefetch" href="https://xjsjdworrpquwatfvnuy.supabase.co" />
 		<link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 		<script defer src="https://cloud.umami.is/script.js" data-website-id="efa2bc9f-31d1-48b9-982f-b753bc2b8270"></script>
 		%sveltekit.head%
